# 3sat-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: simple.cnf
src/threesat_cli/: api.py  chain.py  config.py  formatting.py  main.py
